simple/am-single/wso2am-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2am-single-node-am-deployment
  namespace: apimdev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      deployment: wso2am-single-node-am
  template:
    metadata:
      labels:
        deployment: wso2am-single-node-am
    spec:
      containers:
        - name: wso2am
          image: wso2/wso2am:4.0.0-multiarch
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 9443
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 9443
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 8243
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: 2Gi
              cpu: 2000m
            limits:
              memory: 3Gi
              cpu: 3000m
          ports:
            - containerPort: 8280
              protocol: "TCP"
            - containerPort: 8243
              protocol: "TCP"
            - containerPort: 9763
              protocol: "TCP"
            - containerPort: 9443
              protocol: "TCP"
            - containerPort: 9711
              protocol: "TCP"
            - containerPort: 9611
              protocol: "TCP"
            - containerPort: 5672
              protocol: "TCP"
          volumeMounts:
            - name: wso2am-conf
              mountPath: /home/wso2carbon/wso2-config-volume/repository/conf
      volumes:
        - name: wso2am-conf
          configMap:
            name: wso2am-single-node-am-conf
