simple/am-single/wso2am-gw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2am-single-node-am-gateway-ingress
  namespace : apimdev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - "dev.gateway.am.wso2.com"
  rules:
  - host: "dev.gateway.am.wso2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2am-single-node-am-service
            port: 
              number: 8243
